# Seraph

./: .gitignore  LICENSE  Makefile  README.md  README.org  Seraph.cabal  example.conf
src/: Main.hs
src/Seraph/: Config.hs  Core.hs  Free.hs  Log.hs  Main.hs  Model.hs  Process.hs  Types.hs  Util.hs
test/: Spec.hs  SpecHelper.hs
test/Seraph/: CoreSpec.hs  LogSpec.hs  ModelSpec.hs  ProcessSpec.hs  TypesSpec.hs
test/jobs/: hardboiled.sh  pushover.sh
