name:                Seraph
version:             0.0.0
synopsis:            Rewrite of Angel
description:         Fully-compatible rewrite of the Angel process monitor.
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           (c) 2014-2015 Michael Xavier
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable seraph
  main-is: Seraph/Main.hs
  build-depends: async
  build-depends: base >=4.6
  build-depends: configurator >= 0.2.0.2
  build-depends: containers
  build-depends: errors
  build-depends: free
  build-depends: hashable
  build-depends: lens
  build-depends: mtl
  build-depends: mvc
  build-depends: old-locale
  build-depends: pipes
  build-depends: split
  build-depends: stm
  build-depends: text
  build-depends: time
  build-depends: unix >= 2.7.0.1
  build-depends: unordered-containers
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -threaded -auto-all -caf-all -Wall -Werror -fno-warn-unused-do-bind


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src, test
  build-depends:  HUnit
                , QuickCheck
                , async
                , base >=4.6
                , configurator >= 0.2.0.2
                , containers
                , derive
                , errors
                , free
                , hashable
                , lens
                , mtl
                , mvc
                , old-locale
                , pipes
                , SafeSemaphore
                , split
                , stm
                , text
                , time
                , unix >= 2.7.0.1
                , unordered-containers
                , tasty
                , tasty-hunit
                , tasty-quickcheck
                , quickcheck-properties
  ghc-options: -threaded -with-rtsopts=-N
  default-language: Haskell2010
